Upgrade to clean starter portfolio

--- a/index.html
+++ b/index.html
@@ -1,24 +1,68 @@
-<!-- rebuild: 2025-06-22 -->
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Karthik's Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Karthik Pythireddi | Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
   </head>
   <body>
-    <h1>Hello! I’m Karthik 🎉</h1>
-    <p>Welcome to my portfolio page. I’ll be sharing projects, blogs, and more here.</p>
+    <section class="section">
+      <div class="container has-text-centered">
+        <figure class="image is-128x128 is-inline-block">
+          <img
+            class="is-rounded"
+            src="https://avatars.githubusercontent.com/karthikpythireddi"
+            alt="Profile"
+          />
+        </figure>
+        <h1 class="title mt-4">Karthik Pythireddi 🎉</h1>
+        <p class="subtitle">Welcome to my portfolio site!</p>
+      </div>
+    </section>
 
-    <img src="https://avatars.githubusercontent.com/karthikpythireddi" width="150" style="border-radius: 50%;" alt="Profile picture">
+    <section class="section" id="projects">
+      <div class="container">
+        <h2 class="title is-4">🔧 Projects</h2>
+        <ul>
+          <li>
+            <a
+              href="https://github.com/karthikpythireddi/AA228_CS238_Decision_Making_Under_Uncertainity/blob/main/AA228_AA238_Final_Project.pdf"
+              target="_blank"
+              >Model-Free RL for On-Demand Delivery Optimization</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/karthikpythireddi/AA203_Final_Project"
+              target="_blank"
+              >Lane Keeping for Autonomous Vehicle using iLQR-Initialized MPC</a
+            >
+          </li>
+        </ul>
+      </div>
+    </section>
 
-    <h2>🔧 Projects</h2>
-    <ul>
-      <li><a href="https://github.com/karthikpythireddi/AA228_CS238_Decision_Making_Under_Uncertainity/blob/main/AA228_AA238_Final_Project.pdf">Model Free RL for On-Demand Delivery Optimization</a></li>
-      <li><a href="https://github.com/karthikpythireddi/AA203_Final_Project">Lane Keeping for Autonomous Vehicle using iLQR Initialized Model Predictive Control</a></li>
-    </ul>
+    <section class="section" id="resume">
+      <div class="container">
+        <h2 class="title is-4">📄 Resume</h2>
+        <a class="button is-link" href="resume.pdf" download>Download Resume</a>
+      </div>
+    </section>
 
-    <h2>📄 Resume</h2>
-    <a href="resume.pdf" download>Download my resume</a>
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+          © 2025 Karthik Pythireddi | 
+          <a href="https://github.com/karthikpythireddi" target="_blank"
+            >GitHub</a
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
 
