Added LinkedIn and Buy me a Coffee Button

--- a/index.html
+++ b/index.html
@@ -51,18 +51,32 @@
         <h2 class="title is-4">📄 Resume</h2>
         <a class="button is-link" href="resume.pdf" download>Download Resume</a>
       </div>
+
     </section>
+<div class="has-text-centered mt-6">
+  <a href="https://buymeacoffee.com/karthikpythireddi" target="_blank">
+    <img
+      src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png"
+      alt="Buy Me A Coffee"
+      style="height: 45px; width: 162px"
+    />
+  </a>
+</div>
 
     <footer class="footer">
-      <div class="content has-text-centered">
-        <p>
-          © 2025 Karthik Pythireddi | 
-          <a href="https://github.com/karthikpythireddi" target="_blank"
-            >GitHub</a
-          >
-        </p>
-      </div>
-    </footer>
+  <div class="content has-text-centered">
+    <p>
+      © 2025 Karthik Pythireddi |
+      <a href="https://github.com/karthikpythireddi" target="_blank">GitHub</a> |
+      <a href="https://www.linkedin.com/in/karthikpythireddi/" target="_blank">LinkedIn</a>
+    </p>
+  </div>
+</footer>
+
+
+
+
+
   </body>
 </html>
 
