--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
   </a>
 </div>
 
+
+
+<div class="has-text-centered mt-4">
+  <a href="https://www.linkedin.com/in/karthikpythireddi/" target="_blank">
+    <img
+      src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+      alt="LinkedIn"
+      style="height: 45px; width: 162px; object-fit: contain"
+    />
+  </a>
+</div>
+
     <footer class="footer">
   <div class="content has-text-centered">
     <p>
@@ -72,7 +84,6 @@
     </p>
   </div>
 </footer>
-
 
 
 
