--- a/index.html
+++ b/index.html
@@ -1,93 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karthik Pythireddi | Portfolio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
-    />
-  </head>
-  <body>
-    <section class="section">
-      <div class="container has-text-centered">
-        <figure class="image is-128x128 is-inline-block">
-          <img
-            class="is-rounded"
-            src="https://avatars.githubusercontent.com/karthikpythireddi"
-            alt="Profile"
-          />
-        </figure>
-        <h1 class="title mt-4">Karthik Pythireddi 🎉</h1>
-        <p class="subtitle">Welcome to my portfolio site!</p>
-      </div>
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Karthik Pythireddi | Robotics & AI</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
+  <style>
+    body {
+      background-color: #0d1117;
+      color: #c9d1d9;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    a {
+      color: #58a6ff;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    h1, h2, h3 {
+      color: #58a6ff;
+    }
+    .profile-pic {
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
+    .button-img {
+      height: 45px;
+      width: 162px;
+      margin: 10px;
+    }
+    .section {
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+    }
+  </style>
+</head>
+<body>
+  <section class="section has-text-centered">
+    <div class="container">
+      <img class="profile-pic" src="https://avatars.githubusercontent.com/karthikpythireddi" width="120" alt="Karthik" />
+      <h1 class="title is-2">Karthik Pythireddi</h1>
+      <p class="subtitle is-4">Robotics Enthusiast | AI Researcher | Control Systems Explorer</p>
+    </div>
+  </section>
 
-    <section class="section" id="projects">
-      <div class="container">
-        <h2 class="title is-4">🔧 Projects</h2>
-        <ul>
-          <li>
-            <a
-              href="https://github.com/karthikpythireddi/AA228_CS238_Decision_Making_Under_Uncertainity/blob/main/AA228_AA238_Final_Project.pdf"
-              target="_blank"
-              >Model-Free RL for On-Demand Delivery Optimization</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/karthikpythireddi/AA203_Final_Project"
-              target="_blank"
-              >Lane Keeping for Autonomous Vehicle using iLQR-Initialized MPC</a
-            >
-          </li>
-        </ul>
-      </div>
-    </section>
+  <section class="section">
+    <div class="container">
+      <h2 class="title is-4">🤖 AI & Robotics Projects</h2>
+      <ul>
+        <li><a href="https://github.com/karthikpythireddi/AA203_Final_Project" target="_blank">Lane Keeping using iLQR + MPC for Autonomous Vehicles</a></li>
+        <li><a href="https://github.com/karthikpythireddi/AA228_CS238_Decision_Making_Under_Uncertainity" target="_blank">Model-Free RL for On-Demand Delivery Optimization</a></li>
+      </ul>
+    </div>
+  </section>
 
-    <section class="section" id="resume">
-      <div class="container">
-        <h2 class="title is-4">📄 Resume</h2>
-        <a class="button is-link" href="resume.pdf" download>Download Resume</a>
-      </div>
+  <section class="section">
+    <div class="container">
+      <h2 class="title is-4">🔧 General Projects</h2>
+      <ul>
+        <li><a href="https://github.com/karthikpythireddi" target="_blank">View more on GitHub</a></li>
+      </ul>
+    </div>
+  </section>
 
-    </section>
-<div class="has-text-centered mt-6">
-  <a href="https://buymeacoffee.com/karthikpythireddi" target="_blank">
-    <img
-      src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png"
-      alt="Buy Me A Coffee"
-      style="height: 45px; width: 162px"
-    />
-  </a>
-</div>
+  <section class="section">
+    <div class="container">
+      <h2 class="title is-4">🧠 Tools & Frameworks</h2>
+      <ul>
+        <li>Python, ROS, C++, MATLAB</li>
+        <li>PyTorch, TensorFlow, OpenCV</li>
+        <li>MPC, PID, LQR, SLAM, Kalman Filters</li>
+      </ul>
+    </div>
+  </section>
 
+  <section class="section has-text-centered">
+    <div class="container">
+      <a href="https://buymeacoffee.com/karthikpythireddi" target="_blank">
+        <img class="button-img" src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" />
+      </a>
+      <a href="https://www.linkedin.com/in/karthikpythireddi/" target="_blank">
+        <img class="button-img" src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
+      </a>
+    </div>
+  </section>
 
+  <section class="section">
+    <div class="container has-text-centered">
+      <h2 class="title is-4">📄 Resume</h2>
+      <a class="button is-link" href="resume.pdf" download>Download Resume</a>
+    </div>
+  </section>
 
-<div class="has-text-centered mt-4">
-  <a href="https://www.linkedin.com/in/karthikpythireddi/" target="_blank">
-    <img
-      src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
-      alt="LinkedIn"
-      style="height: 45px; width: 162px; object-fit: contain"
-    />
-  </a>
-</div>
-
-    <footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      © 2025 Karthik Pythireddi |
-      <a href="https://github.com/karthikpythireddi" target="_blank">GitHub</a> |
-      <a href="https://www.linkedin.com/in/karthikpythireddi/" target="_blank">LinkedIn</a>
-    </p>
-  </div>
-</footer>
-
-
-
-
-  </body>
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        © 2025 Karthik Pythireddi |
+        <a href="https://github.com/karthikpythireddi" target="_blank">GitHub</a> |
+        <a href="https://www.linkedin.com/in/karthikpythireddi/" target="_blank">LinkedIn</a>
+      </p>
+    </div>
+  </footer>
+</body>
 </html>
-
