updated the index.html with more changes with resume and Stanford University

--- a/index.html
+++ b/index.html
@@ -341,24 +341,34 @@
       <h2 class="section-title"><i class="ph ph-timer"></i> My AI & Robotics Journey</h2>
       <div class="timeline">
         <div class="timeline-event">
-          <div class="timeline-date">2021</div>
-          <div class="timeline-title">Started Graduate Studies in AI & Robotics</div>
-          <div class="timeline-desc">Began formal education and research in artificial intelligence, robotics, and control systems.</div>
+          <div class="timeline-date">Sep 2022 – Dec 2026 (Expected)</div>
+          <div class="timeline-title">Master of Science in Electrical Engineering: AI & Robotics, Stanford University</div>
+          <div class="timeline-desc">Pursuing advanced research and coursework in AI, robotics, and control systems. All research projects from 2022 onward are part of my Stanford journey, including work on lane-keeping for autonomous vehicles, reinforcement learning for delivery optimization, and state estimation for robotics.</div>
         </div>
         <div class="timeline-event">
-          <div class="timeline-date">2022</div>
-          <div class="timeline-title">First AI Research Project</div>
-          <div class="timeline-desc">Developed lane keeping for autonomous vehicles using iLQR and MPC.</div>
+          <div class="timeline-date">Aug 2014</div>
+          <div class="timeline-title">Graduated B.Tech, Gitam University</div>
+          <div class="timeline-desc">Bachelor of Technology in Electronics and Communication Engineering.</div>
         </div>
         <div class="timeline-event">
-          <div class="timeline-date">2023</div>
-          <div class="timeline-title">Reinforcement Learning for Delivery Optimization</div>
-          <div class="timeline-desc">Applied model-free RL to real-world logistics and decision making under uncertainty.</div>
+          <div class="timeline-date">Dec 2017</div>
+          <div class="timeline-title">Graduated MS, RIT</div>
+          <div class="timeline-desc">Master of Science in Electrical Engineering (Control Systems), Rochester Institute of Technology.</div>
         </div>
         <div class="timeline-event">
-          <div class="timeline-date">2024</div>
-          <div class="timeline-title">Expanding AI Portfolio</div>
-          <div class="timeline-desc">Contributed to open-source AI projects and started sharing insights via blog and talks.</div>
+          <div class="timeline-date">Feb 2018 – Apr 2021</div>
+          <div class="timeline-title">Autonomous Driving Systems Test & Verification Engineer, Motional (Hyundai–Aptiv JV)</div>
+          <div class="timeline-desc">Developed and tested high-level controller and planning features for autonomous vehicles. Conducted simulation and in-vehicle experiments, including stress testing features on the Las Vegas Strip and highway testing on the California-Nevada border.</div>
+        </div>
+        <div class="timeline-event">
+          <div class="timeline-date">Apr 2021 – Aug 2021</div>
+          <div class="timeline-title">Autonomous Driving Systems Engineer, DIDI Labs</div>
+          <div class="timeline-desc">Worked on autonomy feature test cases for planning and controls. Defined metrics and simulation requirements, and automated data analysis for AV features.</div>
+        </div>
+        <div class="timeline-event">
+          <div class="timeline-date">Aug 2021 – Present</div>
+          <div class="timeline-title">Senior Software Validation Engineer – Autonomous Driving, NVIDIA</div>
+          <div class="timeline-desc">Worked on L2/L3 autonomy, system integration, error handling, safety, and validation for NVIDIA DRIVE products. Led validation of sensor modules and platform integration for advanced AV systems.</div>
         </div>
       </div>
     </div>
